--- a/client/ep.css
+++ b/client/ep.css
@@ -114,6 +114,7 @@ height:32px;
 
 #banner-ether {
 color:#B3E2FF;
+padding-left: 3px;
 }
 
 #banner-gantt {
@@ -197,11 +198,11 @@ background-image: url(data:image/png;base64,R0lGODlhGAEgAMQAAMjZ5Y2yl/P2+dXh62aW
 }
 
 a.madewith_badge {
+position: fixed;
 text-decoration: none;
 z-index: 10000;
 font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 display: block;
-position: absolute;
 top: 0;
 right: 0;
 width: 280px;
@@ -211,3 +212,101 @@ background-position: left top;
 font-weight: 700;
 }
 
+
+.icon {
+position: fixed;
+z-index: 10000;
+top: 0;
+width: 32px;
+height: 32px;
+}
+
+#iconActionPlusDefault {
+background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
+left: 168px;
+}
+#iconMinus {
+background: url("/iconic/gray_light/minus_16x4.png") no-repeat 0 center;
+left: 200px;
+}
+#iconArrowLeft {
+background: url("/iconic/gray_light/arrow_left_16x16.png") no-repeat 0 center;
+left: 232px;
+}
+#iconArrowDown {
+background: url("/iconic/gray_light/arrow_down_16x16.png") no-repeat 0 center;
+left: 264px;
+}
+#iconArrowUp {
+background: url("/iconic/gray_light/arrow_up_16x16.png") no-repeat 0 center;
+left: 296px;
+}
+#iconArrowRight {
+background: url("/iconic/gray_light/arrow_right_16x16.png") no-repeat 0 center;
+left: 328px;
+}
+#iconCheck {
+background: url("/iconic/gray_light/check_16x13.png") no-repeat 0 center;
+left: 360px;
+}
+#iconX {
+background: url("/iconic/gray_light/x_14x14.png") no-repeat 0 center;
+left: 392px;
+}
+
+
+#iconActionPlus {
+background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
+left: 168px;
+z-index: 20000;
+}
+#iconActionPlusPlus {
+background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
+left: 168px;
+z-index: 30000;
+}
+#iconActionMinus {
+background: url("/iconic/red/minus_16x4.png") no-repeat 0 center;
+left: 200px;
+z-index: 20000;
+}
+#iconActionArrowLeft {
+background: url("/iconic/green/arrow_left_16x16.png") no-repeat 0 center;
+left: 232px;
+z-index: 20000;
+}
+#iconActionArrowDown {
+background: url("/iconic/green/arrow_down_16x16.png") no-repeat 0 center;
+left: 264px;
+z-index: 20000;
+}
+#iconActionArrowUp {
+background: url("/iconic/green/arrow_up_16x16.png") no-repeat 0 center;
+left: 296px;
+z-index: 20000;
+}
+#iconActionArrowRight {
+background: url("/iconic/green/arrow_right_16x16.png") no-repeat 0 center;
+left: 328px;
+z-index: 20000;
+}
+#iconActionCheck {
+background: url("/iconic/green/check_16x13.png") no-repeat 0 center;
+left: 360px;
+z-index: 20000;
+}
+#iconActionX {
+background: url("/iconic/red/x_14x14.png") no-repeat 0 center;
+left: 392px;
+z-index: 20000;
+}
+#iconActionCheckEntry {
+background: url("/iconic/green/check_16x13.png") no-repeat 0 center;
+left: 360px;
+z-index: 20000;
+}
+#iconActionXEntry {
+background: url("/iconic/red/x_14x14.png") no-repeat 0 center;
+left: 392px;
+z-index: 20000;
+}
