--- a/client/ep.css
+++ b/client/ep.css
@@ -16,38 +16,11 @@ color:#888;
 display:none;
 }
 
-.order {
-width: 30px;
-}
-
-
-#headerOrder {
-width: 30px;
-}
-
-.start  {
-text-align:left;
-width: 80px;
-}
-
-#headerStart {
-	width: 80px;
-}
-
-
-.value {
-text-align:right;
-width: 50px;
-}
-
-#headerValue {
-	width: 50px;
-}
 
 table#parts {
 position: absolute;
 overflow: auto;
-top: 32px;
+top: 70px;
 border:0px; 
 width:100%;
 border-collapse:collapse;
@@ -57,7 +30,7 @@ font-size:12px;
 
 table#parts tr td {
 border:0px;
-border-bottom:1px solid #114175;
+border-bottom:1px solid #000;
 border-collapse:collapse;
 padding:3px;
 height:25px;
@@ -65,14 +38,24 @@ height:25px;
 
 table#parts tr th {
 border:0px;
-border-top:1px solid #fff;
-background-color:#114175;
+background-color:#000;
 border-collapse:collapse;
 padding:3px;
 height:25px;
 text-align:left;
 font-weight:700;
 color:#fff;
+}
+
+#buttonBar {
+top: 35px;
+position: fixed;
+left: 0px;
+width: 100%;
+padding-top: 0px;
+padding-bottom: 0px;
+background:#ccc;
+height:35px;
 }
 
 #banner {
@@ -86,7 +69,7 @@ background:#114175;
 font-size:30px;
 font-weight:700;
 font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
-height:32px;
+height:35px;
 }
 
 #banner-ether {
@@ -172,97 +155,126 @@ position: relative;
 .icon {
 position: fixed;
 z-index: 10000;
-top: 0;
+top: 35px;
 width: 32px;
 height: 32px;
 }
 
 #iconActionPlusDefault {
-background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
-left: 168px;
+background: url("/iconic/gray_dark/plus_16x16.png") no-repeat 0 center;
+left: 5px;
 }
 #iconMinus {
 background: url("/iconic/gray_light/minus_16x4.png") no-repeat 0 center;
-left: 200px;
+left: 37px;
 }
 #iconArrowLeft {
 background: url("/iconic/gray_light/arrow_left_16x16.png") no-repeat 0 center;
-left: 232px;
+left: 69px;
 }
 #iconArrowDown {
 background: url("/iconic/gray_light/arrow_down_16x16.png") no-repeat 0 center;
-left: 264px;
+left: 101px;
 }
 #iconArrowUp {
 background: url("/iconic/gray_light/arrow_up_16x16.png") no-repeat 0 center;
-left: 296px;
+left: 133px;
 }
 #iconArrowRight {
 background: url("/iconic/gray_light/arrow_right_16x16.png") no-repeat 0 center;
-left: 328px;
+left: 165px;
 }
 #iconCheck {
 background: url("/iconic/gray_light/check_16x13.png") no-repeat 0 center;
-left: 360px;
+left: 197px;
 }
 #iconX {
 background: url("/iconic/gray_light/x_14x14.png") no-repeat 0 center;
-left: 392px;
+left: 229px;
 }
 
 
 #iconActionPlus {
-background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
-left: 168px;
+background: url("/iconic/gray_dark/plus_16x16.png") no-repeat 0 center;
+left: 5px;
 z-index: 20000;
 }
 #iconActionPlusPlus {
-background: url("/iconic/green/plus_16x16.png") no-repeat 0 center;
-left: 168px;
+background: url("/iconic/gray_dark/plus_16x16.png") no-repeat 0 center;
+left: 5px;
 z-index: 30000;
 }
 #iconActionMinus {
-background: url("/iconic/red/minus_16x4.png") no-repeat 0 center;
-left: 200px;
+background: url("/iconic/black/minus_16x4.png") no-repeat 0 center;
+left: 37px;
 z-index: 20000;
 }
 #iconActionArrowLeft {
-background: url("/iconic/green/arrow_left_16x16.png") no-repeat 0 center;
-left: 232px;
+background: url("/iconic/gray_dark/arrow_left_16x16.png") no-repeat 0 center;
+left: 69px;
 z-index: 20000;
 }
 #iconActionArrowDown {
-background: url("/iconic/green/arrow_down_16x16.png") no-repeat 0 center;
-left: 264px;
+background: url("/iconic/gray_dark/arrow_down_16x16.png") no-repeat 0 center;
+left: 101px;
 z-index: 20000;
 }
 #iconActionArrowUp {
-background: url("/iconic/green/arrow_up_16x16.png") no-repeat 0 center;
-left: 296px;
+background: url("/iconic/gray_dark/arrow_up_16x16.png") no-repeat 0 center;
+left: 133px;
 z-index: 20000;
 }
 #iconActionArrowRight {
-background: url("/iconic/green/arrow_right_16x16.png") no-repeat 0 center;
-left: 328px;
+background: url("/iconic/gray_dark/arrow_right_16x16.png") no-repeat 0 center;
+left: 165px;
 z-index: 20000;
 }
 #iconActionCheck {
-background: url("/iconic/green/check_16x13.png") no-repeat 0 center;
-left: 360px;
+background: url("/iconic/gray_dark/check_16x13.png") no-repeat 0 center;
+left: 197px;
 z-index: 20000;
 }
 #iconActionX {
-background: url("/iconic/red/x_14x14.png") no-repeat 0 center;
-left: 392px;
+background: url("/iconic/black/x_14x14.png") no-repeat 0 center;
+left: 229px;
 z-index: 20000;
 }
 #iconActionCheckEntry {
-background: url("/iconic/green/check_16x13.png") no-repeat 0 center;
-left: 360px;
+background: url("/iconic/gray_dark/check_16x13.png") no-repeat 0 center;
+left: 197px;
 z-index: 20000;
 }
 #iconActionXEntry {
-background: url("/iconic/red/x_14x14.png") no-repeat 0 center;
-left: 392px;
+background: url("/iconic/black/x_14x14.png") no-repeat 0 center;
+left: 229px;
 z-index: 20000;
+}
+
+
+
+
+.order {
+width: 30px;
+}
+
+#headerOrder {
+width: 30px;
+}
+
+.start  {
+text-align:left;
+width: 80px;
+}
+
+#headerStart {
+width: 80px;
+}
+
+.value {
+text-align:left;
+width: 40px;
+}
+
+#headerValue {
+width: 40px;
 }
