--- a/client/ep.css
+++ b/client/ep.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Nova+Mono);
-
 * {
 margin:0;
 padding:0;
@@ -24,14 +22,14 @@ top:64px;
 border:0;
 width:100%;
 border-collapse:collapse;
-font-family:'Nova Mono', cursive;
-font-size:12px;
+font-family:'Ubuntu Mono', cursive;
+font-size:16px;
 }
 
 table#parts tr td {
 border:0px solid #000;
 border-collapse:collapse;
-height:25px;
+height:30px;
 padding:3px;
 }
 
@@ -91,6 +89,9 @@ color:#E8F4FF;
 input {
 border:1px solid #888;
 border-radius:3px;
+height:22px;
+font-size:16px;
+font-family:'Ubuntu Mono', cursive;
 }
 
 .unselectable {
@@ -231,11 +232,11 @@ z-index:20000;
 
 .start {
 text-align:left;
-width:80px;
+width:90px;
 }
 
 #headerStart {
-width:80px;
+width:90px;
 }
 
 .value {
@@ -259,5 +260,5 @@ z-index:20000;
 width:25px;
 }
 .order {
-	cursor: move;
+cursor: move;
 }
