--- a/client/ep.css
+++ b/client/ep.css
@@ -37,7 +37,7 @@ border:0px solid #000;
 border-collapse:collapse;
 height:30px;
 padding:0px;
-padding-left:3px;
+padding-left:0px;
 }
 
 table#parts tr th {
@@ -63,7 +63,7 @@ height:32px;
 }
 
 #editValue,#entryValue {
-width:20px;
+width:25px;
 }
 
 .madewith_badge {
@@ -94,12 +94,20 @@ color:#E8F4FF;
 }
 
 input {
-border:1px solid #888;
-border-radius:3px;
-height:22px;
-font-size:16px;
-font-family:'Ubuntu Mono', cursive;
+	border: none !important;
+	border-radius:3px;
+	height:22px;
+	font-size:16px;
+	font-family:'Ubuntu Mono', cursive;
+	background-color: #ddd;
+	position: relative; 
+	left: -1px;
 }
+input:focus { 
+	outline:0px;
+}
+
+
 
 .unselectable {
 -moz-user-select:0;
