--- a/client/ep.css
+++ b/client/ep.css
@@ -1,4 +1,4 @@
-*
+table, body
 {
 	margin: 0;
 	padding: 0;	
@@ -77,10 +77,6 @@ table#parts tr th#headerOrder
 	top: 32px;
 	width: 100%;
 }
-#editValue,#entryValue
-{
-	width: 25px;
-}
 .madewith_badge
 {
 	position: fixed!important;
@@ -122,7 +118,7 @@ table#parts input
 	font-size: 14px;
 	font-weight: normal;
 	height: 20px;
-	left: -1px;
+	left: -4px;
 	position: relative;
 }
 table#parts input:focus
@@ -185,86 +181,87 @@ table#parts input:focus
 	top: 32px;
 	width: 32px;
 	z-index: 1;
+	cursor: pointer;
 }
 #iconActionPlusDefault
 {
-	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat center center;
 	left: 5px;
 }
 #iconMinus
 {
-	background: url(/iconic/gray_light/minus_16x4.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/minus_16x4.png) no-repeat center center;
 	left: 37px;
 }
 #iconArrowLeft
 {
-	background: url(/iconic/gray_light/arrow_left_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/arrow_left_16x16.png) no-repeat center center;
 	left: 69px;
 }
 #iconArrowDown
 {
-	background: url(/iconic/gray_light/arrow_down_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/arrow_down_16x16.png) no-repeat center center;
 	left: 101px;
 }
 #iconArrowUp
 {
-	background: url(/iconic/gray_light/arrow_up_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/arrow_up_16x16.png) no-repeat center center;
 	left: 133px;
 }
 #iconArrowRight
 {
-	background: url(/iconic/gray_light/arrow_right_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/arrow_right_16x16.png) no-repeat center center;
 	left: 165px;
 }
 #iconCheck
 {
-	background: url(/iconic/gray_light/check_16x13.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/check_16x13.png) no-repeat center center;
 	left: 197px;
 }
 #iconX
 {
-	background: url(/iconic/gray_light/x_14x14.png) no-repeat 0 center;
+	background: url(/iconic/gray_light/x_14x14.png) no-repeat center center;
 	left: 229px;
 }
 #iconActionPlus
 {
-	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat center center;
 	left: 5px;
 	z-index: 2;
 }
 #iconActionPlusPlus
 {
-	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/plus_16x16.png) no-repeat center center;
 	left: 5px;
 	z-index: 2;
 }
 #iconActionMinus
 {
-	background: url(/iconic/black/minus_16x4.png) no-repeat 0 center;
+	background: url(/iconic/black/minus_16x4.png) no-repeat center center;
 	left: 37px;
 	z-index: 2;
 }
 #iconActionArrowLeft
 {
-	background: url(/iconic/gray_dark/arrow_left_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/arrow_left_16x16.png) no-repeat center center;
 	left: 69px;
 	z-index: 2;
 }
 #iconActionArrowDown
 {
-	background: url(/iconic/gray_dark/arrow_down_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/arrow_down_16x16.png) no-repeat center center;
 	left: 101px;
 	z-index: 2;
 }
 #iconActionArrowUp
 {
-	background: url(/iconic/gray_dark/arrow_up_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/arrow_up_16x16.png) no-repeat center center;
 	left: 133px;
 	z-index: 2;
 }
 #iconActionArrowRight
 {
-	background: url(/iconic/gray_dark/arrow_right_16x16.png) no-repeat 0 center;
+	background: url(/iconic/gray_dark/arrow_right_16x16.png) no-repeat center center;
 	left: 165px;
 	z-index: 2;
 }
@@ -291,17 +288,24 @@ table#parts input:focus
 	text-align: left;
 	width: 40px;
 }
+.depend
+{
+	text-align: left;
+	width: 40px;
+}
 #iconActionCheck,#iconActionCheckEntry
 {
-	background: url(/iconic/gray_dark/check_16x13.png) no-repeat 0 center;
-	left: 197px;
-	z-index: 2;
+	background: url(/iconic/gray_dark/check_16x13.png) no-repeat center center;
+	width: 20px;
+	display: inline-block;
+	cursor: pointer;
 }
 #iconActionX,#iconActionXEntry
 {
-	background: url(/iconic/black/x_14x14.png) no-repeat 0 center;
-	left: 229px;
-	z-index: 2;
+	background: url(/iconic/black/x_14x14.png) no-repeat center center;
+	width: 20px;
+	display: inline-block;
+	cursor: pointer;
 }
 #showOptions, #hideOptions
 {
@@ -310,13 +314,7 @@ table#parts input:focus
 	top: 37px;
 	z-index: 2;
 }
-#showDebug, #hideDebug
-{
-	left: 400px;
-	position: fixed;
-	top: 37px;
-	z-index: 2;
-}
+
 #showOptions, #hideOptions, #showDebug, #hideDebug, #moveTo, .clearInput
 {
 	font-family: 'Droid Sans', sans-serif;
@@ -329,11 +327,16 @@ table#parts input:focus
 {
 	width: 40px;
 }
+#headerDepend
+{
+	width: 40px;
+}
 .order:hover
 {
 	background: url(/side.png) no-repeat 0 center;
 	cursor: move;
 }
+
 .isGroup td.showLabel, table#parts tr.isGroup input
 {
 	color: #114175;
@@ -365,7 +368,7 @@ tr.edit td, tr.edit:hover td
 }
 
 
-.showLabel, .showStart, .showFinish, #headerFinish, #headerLabel, #headerStart {
+.label, .start, .finish, #headerFinish, #headerLabel, #headerStart, #headerDepend, .depend {
 	border-right: 1px dashed #888 !important;
 	border-left: 1px dashed #888 !important;
 }
